Homepage section - done

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Pinyon Script');
+@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Poppins:wght@400;600;700&display=swap');
+
 .App {
   font-family: 'Poppins', sans-serif;
   text-align: center;
